# se2clam

./: CMakeLists.txt
include/se2clam/: Track.h  converter.h  sparsifier.h
src/: GlobalMapper.cpp  Localizer.cpp  MapStorage.cpp  Track.cpp
test/: test_vn.cpp
